# ChangeLog for x11-misc/rednotebook
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/rednotebook/ChangeLog,v 1.5 2009/05/25 19:47:34 hwoarang Exp $

*rednotebook-0.7.2 (25 May 2009)

  25 May 2009; Markos Chandras <hwoarang@gentoo.org>
  -rednotebook-0.6.9.ebuild, +rednotebook-0.7.2.ebuild:
  Version bump, remove old ebuild

*rednotebook-0.7.1 (21 May 2009)

  21 May 2009; Markos Chandras <hwoarang@gentoo.org>
  +rednotebook-0.7.1.ebuild:
  Version bump

*rednotebook-0.7.0 (20 May 2009)

  20 May 2009; Markos Chandras <hwoarang@gentoo.org>
  +rednotebook-0.7.0.ebuild:
  Version bump

  11 May 2009; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Adding Josh Saddler <nightmorph@gentoo.org> as proxy maintainer

*rednotebook-0.6.9 (10 May 2009)

  10 May 2009; Markos Chandras <hwoarang@gentoo.org>
  +rednotebook-0.6.9.ebuild, +metadata.xml:
  Moved from sunrise. Thanks to Adam Zajac. Changed category to x11-misc.
  Thanks
  to Josh Saddler for improved ebuild. Fixes bug 253399
