@@ -1,8 +1,10 @@
 DIST rednotebook-0.7.0.tar.gz 238239 RMD160 c1667097470639efea20ab96ab7390216a1a5bc9 SHA1 e73c99fe32311a097392ad21b93b428956f29a55 SHA256 978b85ccd4b9c5210d3696b817b5701d853a5b937e15f86b9bbd62c3e92d5248
 DIST rednotebook-0.7.1.tar.gz 239312 RMD160 575609d245df5270eb80896fea9defcd66bc653c SHA1 39d699fa60858e611525a6b24085f454603f7b43 SHA256 5aaaf619d7b1b85b73ca971395c9282bc06ca4182b9231e2a94d7b250eefe04a
 DIST rednotebook-0.7.2.tar.gz 240498 RMD160 0f79477f97fc6d58467abe07e52e5035752b411f SHA1 a2be15830574e57eb5f5413df5f8cd195807c6c7 SHA256 b4bac9860d75455a98f28a382989872c1f3710c31e7cffb69cb81f715290423c
+DIST rednotebook-0.7.3.tar.gz 242457 RMD160 a728c1874533647762a877c7f4c3f2ce72e47490 SHA1 c3e6ad49c4944d332ad7fe3f4fc137b38d4f8644 SHA256 cc48f1efbc9321d95cfbecc3c4eabb82b284793e52f971605ec144090cd03f66
 EBUILD rednotebook-0.7.0.ebuild 603 RMD160 ef6ad7e5cdd88a8e37fc605c485b4e16f527678c SHA1 6d0180423c763f993b67dfb30ab2973d24ebedac SHA256 99367fc861713ac1a1abd0b692871cb6f6ec55d6c6db7fdb973238c6c8db25ce
 EBUILD rednotebook-0.7.1.ebuild 603 RMD160 c73ceecb162dde9e95b59cbd1fc41aec02c1139b SHA1 4f7de5f8f8754531390ef1f1a1e1e1bb9e055ff0 SHA256 f5158224b5e85a01de38666ea6d65970d7e4765ad36b119c4a1d93f9b2a2e878
 EBUILD rednotebook-0.7.2.ebuild 603 RMD160 a507279eaaac7f24fb351e42033fd000e5bd473d SHA1 0e5921576e0d6d5883feaadca55b3e91ca3f741d SHA256 c076a8fae91f578d38a8a07981b61176f1a6ac810b5987582dead5eb89e94cdd
-MISC ChangeLog 1062 RMD160 1f6527ed35c4ece7df0b23a83c1b6df6d2228ab4 SHA1 1cea1e6a7e20f14ec07042fab9b9c0accfd00388 SHA256 19776f7b05cc2c94acb62e5f5ddb0fb50f999defdaf988eeb667ebb33884c291
+EBUILD rednotebook-0.7.3.ebuild 603 RMD160 0d6df3d63de2fd4f0f5c8cce38ec3b3fb025c4cf SHA1 86636e76610d453d167d5ae68a6d9ebb5420f150 SHA256 2583eb1c1ae45ea09a2926826331c598dd759aedf2e3422181612d1ab4d069a7
+MISC ChangeLog 1194 RMD160 7f5ce5d9d4a7c817c32b3090ceb368f4fd913de3 SHA1 1441030d631845c9c2541b894a6ae77a9d725b79 SHA256 2f5fbd424ee011bbd979b76f4b854bacf147c23716e889726a2db713d5e3ebce
 MISC metadata.xml 433 RMD160 cabda1822b53c79336bc373e54221687f4684c40 SHA1 3cc69b1ca4c6f34897525d34e5933bf2247e1711 SHA256 07c60398d39dae66640fc862f9ff60b2055eaf044cb90ba2ace1ed42c9f62fab
