@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/rednotebook
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/rednotebook/ChangeLog,v 1.5 2009/05/25 19:47:34 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/rednotebook/ChangeLog,v 1.6 2009/06/22 08:44:34 hwoarang Exp $
+
+*rednotebook-0.7.3 (22 Jun 2009)
+
+  22 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
+  +rednotebook-0.7.3.ebuild:
+  Version bump
 
 *rednotebook-0.7.2 (25 May 2009)
 
